--- a/components/pages/AdminLocationsPage.module.css
+++ b/components/pages/AdminLocationsPage.module.css
@@ -2,8 +2,10 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  max-width: 100vw;
   min-height: 100vh;
   background: #ffffff;
+  overflow-x: hidden;
 }
 
 .headerSection {
