--- a/components/ui/DashboardSubmenu/DashboardSubmenu.module.css
+++ b/components/ui/DashboardSubmenu/DashboardSubmenu.module.css
@@ -16,13 +16,14 @@
   display: flex;
   flex-direction: row;
   position: relative;
-  align-items: stretch;
+  align-items: center;
   justify-content: flex-start;
   width: 100%;
   height: auto;
   max-width: var(--token-eC7sN0TdrMwT);
   min-width: 0;
-  padding: 8px;
+  min-height: 48px;
+  padding: 4px 8px;
   border-bottom: 1px solid var(--token-Pxe4wDL2kJpb);
 }
 .freeBox___5Vowa {
@@ -34,7 +35,7 @@
   height: auto;
   max-width: 1280px;
   min-width: 0;
-  padding: 2px;
+  padding: 4px 2px;
 }
 .levelsetButton__ouwyl:global(.__wab_instance) {
   max-width: 100%;
