--- a/components/OrgSettings/PermissionsSettings.module.css
+++ b/components/OrgSettings/PermissionsSettings.module.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .header {
@@ -27,6 +29,8 @@
 
 .tabPanel {
   padding-top: 24px;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .loadingContainer {
