--- a/components/AdminMode/AdminModeSidebar.module.css
+++ b/components/AdminMode/AdminModeSidebar.module.css
@@ -101,3 +101,15 @@
 .menuItemActive .icon {
   color: #31664a;
 }
+
+.menuGroup {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.groupDivider {
+  height: 1px;
+  background-color: #e5e5e5;
+  margin: 12px 0;
+}
