--- a/components/AdminMode/OrgOverviewTab.module.css
+++ b/components/AdminMode/OrgOverviewTab.module.css
@@ -20,7 +20,7 @@
 
 .metricsGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 16px;
 }
 
@@ -89,3 +89,5 @@
   align-items: center;
   min-height: 200px;
 }
+
+
